# paperbrain

./: .gitignore  Design.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-13-card-format-author-inference.md  2026-04-13-paperbrain-openai-full.md  2026-04-13-paperbrain-python-cli.md  2026-04-14-article-only-person-generation.md  2026-04-14-gpt-optimized-prompts.md  2026-04-14-ingest-token-and-metadata-llm.md  2026-04-14-llm-person-topic-pipeline.md  2026-04-14-readme-question-centric-framing.md  2026-04-14-remove-old-heuristic-code.md  2026-04-15-gemini-summary-provider.md  2026-04-15-ollama-cloud-summary-provider.md  2026-04-15-paperbrain-web-command.md  (+13 more)
paperbrain/: cli.py  config.py  db.py  exporter.py  main.py  models.py  quality.py  summary_provider.py  utils.py
paperbrain/adapters/: docling.py  docling_worker.py  embedding.py  gemini_client.py  llm.py  marker.py  markitdown.py  ollama_client.py  openai_client.py  parser_factory.py  parser_worker.py
paperbrain/repositories/: __init__.py  postgres.py
paperbrain/services/: export.py  ingest.py  init.py  lint.py  search.py  setup.py  stats.py  summarize.py
paperbrain/web/: __init__.py  app.py  repository.py  schemas.py
skills/paperbrain-workflow/: SKILL.md
tests/: test_cli_commands.py  test_cli_web_command.py  test_config.py  test_db_init.py  test_docling_worker.py  test_exporter.py  test_gemini_client.py  test_ingest_service.py  test_live_openai_pipeline.py  test_main_entrypoint.py  test_marker_parser.py  test_markitdown_parser.py  test_ollama_client.py  test_openai_adapter.py  test_paperbrain_workflow_skill.py  test_parser_factory.py  test_parser_worker.py  test_postgres_repo.py  test_quality.py  test_quality_export.py  test_search_service.py  test_setup_command.py  test_stats_service.py  test_summarize_service.py  test_summary_provider.py  test_web_app.py  test_web_repository.py
(+37 files in other folders)
