[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperbrain"
version = "0.1.0"
description = "Scientific question-centric local knowledge base and discovery engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "psycopg[binary]>=3.2.0",
  "openai>=1.51.0",
  "docling>=2.9.0",
]

[project.scripts]
paperbrain = "paperbrain.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paperbrain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
